updating styling on UI by fixing flexbox alignment and adding color to the button

--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,37 @@
 .App {
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+  background-color: #285cac;
+
 }
 
 
 .App-header {
-  background-color: #285cac;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-
-.main-components{
-  height:90vh;
+  min-height: 10vh;
   width:100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+h1{
+align-self:center;
+min-width: 50%;
 }
 
 
-.right-section{
+.map-component{
   height:100%;
-  width: 100%;
+  width:100%;
   display: flex;
   flex-direction: column;
 }
 
-.filter-button{
-  display: flex;
-  flex-direction: row;
+.filter-form{
+  align-self:center;
 }
